@@ -1,10 +1,7 @@
-# -*- coding: utf-8 -*-
-
+# coding: utf-8
 # Copyright 2014 Globo.com Player authors. All rights reserved.
 # Use of this source code is governed by a MIT License
 # license that can be found in the LICENSE file.
-
-from __future__ import absolute_import
 
 import sys
 import os
@@ -19,48 +16,44 @@ PYTHON_MAJOR_VERSION = sys.version_info
 __all__ = ('M3U8', 'Playlist', 'IFramePlaylist', 'Media', 'Segment', 'loads', 'load', 'parse', 'ParseError')
 
 
-def loads(content):
+def loads(content, uri=None, custom_tags_parser=None):
     '''
     Given a string with a m3u8 content, returns a M3U8 object.
+    Optionally parses a uri to set a correct base_uri on the M3U8 object.
     Raises ValueError if invalid content
     '''
-    return M3U8(content)
+
+    if uri is None:
+        return M3U8(content, custom_tags_parser=custom_tags_parser)
+    else:
+        base_uri = _parsed_url(uri)
+        return M3U8(content, base_uri=base_uri, custom_tags_parser=custom_tags_parser)
 
 
-def load(uri, timeout=None, headers=None):
-
+def load(uri, timeout=None, headers={}, custom_tags_parser=None):
     '''
     Retrieves the content from a given URI and returns a M3U8 object.
     Raises ValueError if invalid content or IOError if request fails.
     Raises socket.timeout(python 2.7+) or urllib2.URLError(python 2.6) if
     timeout happens when loading from uri
     '''
-
-    if headers is None:
-        headers = {}
     if is_url(uri):
-        return _load_from_uri(uri, timeout, headers)
+        return _load_from_uri(uri, timeout, headers, custom_tags_parser)
     else:
-        return _load_from_file(uri)
+        return _load_from_file(uri, custom_tags_parser)
 
 # Support for python3 inspired by https://github.com/szemtiv/m3u8/
 
 
-def _load_from_uri(uri, timeout=None, headers=None):
-    if headers is None:
-        headers = {}
+def _load_from_uri(uri, timeout=None, headers={}, custom_tags_parser=None):
     request = Request(uri, headers=headers)
     resource = urlopen(request, timeout=timeout)
-    base_uri = _parsed_url(_url_for(request))
+    base_uri = _parsed_url(resource.geturl())
     if PYTHON_MAJOR_VERSION < (3,):
         content = _read_python2x(resource)
     else:
         content = _read_python3x(resource)
-    return M3U8(content, base_uri=base_uri)
-
-
-def _url_for(request):
-    return urlopen(request).geturl()
+    return M3U8(content, base_uri=base_uri, custom_tags_parser=custom_tags_parser)
 
 
 def _parsed_url(url):
@@ -80,8 +73,11 @@ def _read_python3x(resource):
     )
 
 
-def _load_from_file(uri):
+def _load_from_file(uri, custom_tags_parser=None):
+
     with open(uri) as fileobj:
         raw_content = fileobj.read().strip()
+
     base_uri = os.path.dirname(uri)
-    return M3U8(raw_content, base_uri=base_uri)
+
+    return M3U8(raw_content, base_uri=base_uri, custom_tags_parser=custom_tags_parser)
